# pmap

./: .gitignore  PLAN.md  README.md  pmap-context.md  pyproject.toml  tmp.py
.claude/logs/: post_tool_use.json
benchmarks/: bench_baseline.py  bench_joblib_progress.py  bench_mpire.py  bench_p_tqdm.py  bench_parallelbar.py  bench_parmap.py  bench_pmap.py  bench_pqdm.py  bench_tqdm_concurrent.py  benchmarks-context.md
demo/: batch_size.py  demo-context.md  job-bars.tape  job_bars.py  loguru-output.tape  loguru_output.py  record_all.sh  safe_mode.py  sequential.py  simple-bar.tape  simple_bar.py  threads.py  tqdm_backend.py
pmap/: __init__.py  core.py  loguru_routing.py  pmap-context.md  progress_bars.py  progress_styles.py
pmap/tqdm_backend/: __init__.py  progress.py  tqdm_backend-context.md
tests/: benchmark.py  test_batch_size.py  test_loguru_capture.py  test_notebook.ipynb  test_pmap.py  test_pmap_all.py  test_pmap_capture.py  test_pmap_comprehensive.py  test_warning_capture.py  tests-context.md
