[project]
name = "pmap"
version = "0.1.0"
description = "Parallel map with progress bars, loguru integration, and rich UI"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.2.0",
    "loguru>=0.7.3",
    "rich>=12.0.0",
    "numpy",
    "pandas",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
