[project]
name = "pmap"
version = "0.1.0"
description = "Parallel map with progress bars, loguru integration, and rich UI"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.2.0",
    "loguru>=0.7.3",
    "rich>=12.0.0",
    "tqdm>=4.66.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "ipykernel>=7.1.0",
    "ipywidgets>=7.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
